# ChangeLog for media-sound/timidity-eawpatches
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/timidity-eawpatches/ChangeLog,v 1.39 2007/09/29 09:06:03 drac Exp $

  29 Sep 2007; Samuli Suominen <drac@gentoo.org>
  timidity-eawpatches-12-r5.ebuild:
  Keyworded and marked stable on arm wrt #156160 and #191283 so they won't
  block FLAC 1.1.4 anymore.

  19 Aug 2007; Samuli Suominen <drac@gentoo.org>
  timidity-eawpatches-12-r4.ebuild:
  arm stable.

  24 Feb 2007; Jeroen Roovers <jer@gentoo.org>
  timidity-eawpatches-12-r5.ebuild:
  Stable for HPPA (bug #156160).

  06 Feb 2007; Simon Stelling <blubb@gentoo.org>
  timidity-eawpatches-12-r5.ebuild:
  stable on amd64; bug 161386

  14 Jan 2007; Joseph Jezak <josejx@gentoo.org>
  timidity-eawpatches-12-r5.ebuild:
  Marked ppc stable for bug #161386.

  12 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
  timidity-eawpatches-12-r5.ebuild:
  stable x86, bug #161386

  11 Jan 2007; Markus Rothe <corsair@gentoo.org>
  timidity-eawpatches-12-r5.ebuild:
  Stable on ppc64; bug #161386

  10 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  timidity-eawpatches-12-r5.ebuild:
  Stable on sparc wrt #161386 and #156160

  05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
  timidity-eawpatches-12-r4.ebuild:
  Convert to use elog.

  03 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  timidity-eawpatches-12-r5.ebuild:
  Restrict binchecks and strip, only installs datafiles.

  03 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  timidity-eawpatches-12-r5.ebuild:
  Fix eselect-timidity dependency.

  01 Dec 2006; Markus Rothe <corsair@gentoo.org>
  timidity-eawpatches-12-r5.ebuild:
  Added ~ppc64; bug #156160

  28 Nov 2006; Joseph Jezak <josejx@gentoo.org>
  timidity-eawpatches-12-r5.ebuild:
  Marked ~ppc for bug #156160.

  25 Nov 2006; Stefan Schweizer <genstef@gentoo.org>
  timidity-eawpatches-12-r5.ebuild:
  ~x86, bug 156160
