@@ -1,3 +1,0 @@
-MD5 8ebcf0583f3077346ebace93c8ea166f eawpats12_full.tar.gz 32047230
-RMD160 79616f0417943a72e616898a69b85b6cfd81f492 eawpats12_full.tar.gz 32047230
-SHA256 0a1b7368e6e525d62900b34bd061ccc830e6fe1747601ede703e3eb0d1d968b6 eawpats12_full.tar.gz 32047230
