@@ -1,3 +1,0 @@
-MD5 983e7f802644f681e1ac3243431de2c4 shominst-0409.zip 9977604
-RMD160 fb4d6b3005fb7710672b72b140687d61681c39c1 shominst-0409.zip 9977604
-SHA256 8669c15b5b4ad9acff24a9877d4806c86c58262a0be9f7de14ab11ddd7751605 shominst-0409.zip 9977604
